<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="artan.com.weather.MainActivity"
    android:id="@+id/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/search_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp">


                <EditText
                    android:id="@+id/city_name_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:background="@color/colorWhite"
                    android:hint="@string/enter_a_us_city_name"
                    android:padding="@dimen/et_weight"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/go"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/go_btn_margin_left"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style"
                    android:onClick="go"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/go"
                    android:textAllCaps="false" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icon_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/temp_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:textColor="@color/colorWhite"
                        android:textSize="65sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Min: "
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_min_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_min"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Max: "
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_max_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_max"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/drop" />

                    <TextView
                        android:id="@+id/humidity_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:paddingBottom="60dp">

                    <TextView
                        android:id="@+id/city_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"

                        android:text="@string/city"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/country_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>
